Wed Jul  4 06:02:38 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * protocols/ace/HTBP/HTBP_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Inside_Squid_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Outside_Squid_Filter.cpp:
        * protocols/ace/RMCast/Acknowledge.cpp:
        * protocols/ace/RMCast/Flow.cpp:
        * protocols/ace/RMCast/Fragment.cpp:
        * protocols/ace/RMCast/Link.cpp:
        * protocols/ace/RMCast/Reassemble.cpp:
        * protocols/ace/RMCast/Retransmit.cpp:
        * protocols/ace/RMCast/Simulator.cpp:
        * protocols/ace/RMCast/Socket.cpp:
        * protocols/ace/RMCast/Stack.cpp:
        * protocols/ace/TMCast/Group.cpp:
        * protocols/examples/RMCast/Send_Msg/Receiver.cpp:
        * protocols/examples/RMCast/Send_Msg/Sender.cpp:
        * protocols/tests/RMCast/Receiver.cpp:
        * protocols/tests/RMCast/Sender.cpp:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS function
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.

Tue Jul  3 21:04:59 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Remove the include <wce.h> for CE.
          It's not there for building CE using VS .NET 2005.

        * examples/Reactor/Multicast/Log_Wrapper.cpp:
        * protocols/ace/RMCast/Link.cpp:
        * protocols/ace/RMCast/Simulator.cpp: Use ACE_OS::time() rather than
          naked time(); fixes build error on WinCE.

        * examples/APG/Sockets/Basic.cpp:
        * examples/APG/Sockets/Iovec.cpp:
        * examples/Connection/misc/test_upipe.h: Use ACE_OS::write() rather
          than naked write() and use ACE_STDOUT rather than fd 1. Fixes
          WinCE build errors.

        * examples/Reactor/Misc/notification.cpp:
        * examples/Reactor/Misc/test_demuxing.cpp: Avoid compile errors where
          both SIGINT and SIGQUIT are stubbed to 0 (such as WinCE).
